--- a/scripts/r-references.bib
+++ b/scripts/r-references.bib
@@ -1474,3 +1474,15 @@
   pages = {1--26},
   doi = {10.18637/jss.v082.i13},
 }
+
+@article{forstmann2008function,
+  title={Function and structure of the right inferior frontal cortex predict individual differences in response inhibition: a model-based approach},
+  author={Forstmann, Birte U and Jahfari, Sara and Scholte, H Steven and Wolfensteller, Uta and van den Wildenberg, Wery PM and Ridderinkhof, K Richard},
+  journal={Journal of Neuroscience},
+  volume={28},
+  number={39},
+  pages={9790--9796},
+  year={2008},
+  publisher={Soc Neuroscience}
+}
+
