--- a/scripts/task_difficulty_ind_dif.Rmd
+++ b/scripts/task_difficulty_ind_dif.Rmd
@@ -31,7 +31,7 @@ authornote: |
   This research was funded by the Deutsche Forschungsgemeinschaft (DFG, German Research Foundation) – project number 317633480 – SFB 1287, Project B05 (Bürki). 
 
 abstract: |
-  Studies show a wide range of individual variability in the time it takes speakers to produce a word or short phrase (e.g., in picture naming tasks). Recent work has found relationships between various measures of cognitive skills, such as attention or inhibition, and how quickly speakers can prepare a word or short phrase for production. In addition, there is some evidence (e.g., from dual-task paradigms) that the relationships between cognitive skills and word production speed are more apparent with more demanding tasks. In two experiments, we examined the relationship between a variety of cognitive measures and picture naming speed. In one of the experiments, the role of task difficulty was also probed by manipulating the perceived amount of time participants were given to name a picture. Only one significant correlation was found between a measures of cognitive skills (sustained attention) and picture naming speed; however, this was not replicated in the second experiment. We discuss the implications of these findings with respect to statisitcal power, reliability, and the specific tasks used to measure cognitive skills.
+  Studies show a wide range of individual variability in the time it takes speakers to produce a word or short phrase (e.g., in picture naming tasks). This variability in language production has often been attributed to variability in cognitive skills, such as attention, working memory, or inhibition. However, these skills are not necessarily unitary constructs, and different tasks that measure a certain construct (e.g., inhibition) may measure different aspects of the skill. There is also some evidence (e.g., from dual-task paradigms) that the relationships between cognitive skills and language production are more apparent with more demanding production tasks. In two experiments, we examined the relationship between a variety of cognitive measures (thought to tap into different aspects of these cognitive skills) and picture naming speed. In one of the experiments, the role of task difficulty was also probed by manipulating the perceived amount of time participants were given to name a picture. Only one significant correlation was found between a measure of cognitive skills (sustained attention) and picture naming speed; however, this was not replicated in the second experiment. We discuss the implications of these findings with respect to statisitcal power, reliability, and the specific tasks used to measure cognitive skills.
 
   
 keywords          : "language production, individual differences, cognitive skills, picture naming"
@@ -123,9 +123,9 @@ lowerFn <- function(data, mapping, method = "lm", ...) {
 
 ```
 
-Speaking is a well-practiced activity that, under many circumstances, feels fairly effortless. However, there is ample evidence that speaking does not necessarily happen automatically and may be at least partially dependent on available cognitive resources. For instance, speaking can interfere with a simultaneous task, such as driving a vehicle [e.g., @kubose2006effects] because it takes cognitive and attentional resources away from driving [@strayer2001driven]. Many laboratory studies of language production report a large amount of individual variability in how quickly speakers can, for example, name a picture [@burki2017electrophysiological; @laganaro2012time; @valente2014erp], and this variability has been assumed to reflect differences in cognitive resources or abilities [e.g., @jongman2017sustained; @jongman2015role; @jongman2015sustained; @piai2013working; @shao2012sources; @shao2013selective; @shao2014electrophysiological; @shao2015selective; @sikora2016executive]. 
+Speaking is a well-practiced activity that, under many circumstances, feels fairly effortless. However, there is ample evidence that speaking does not necessarily happen automatically and may be at least partially dependent on available cognitive resources. For instance, speaking can interfere with a simultaneous task, such as driving a vehicle [e.g., @kubose2006effects] because it takes cognitive resources away from driving [@strayer2001driven]. Many laboratory studies of language production report a large amount of individual variability in how quickly speakers can, for example, name a picture [@burki2017electrophysiological; @laganaro2012time; @valente2014erp], and this variability has been assumed to reflect differences in cognitive resources or abilities [e.g., @jongman2017sustained; @jongman2015role; @jongman2015sustained; @piai2013working; @shao2012sources; @shao2013selective; @shao2014electrophysiological; @shao2015selective; @sikora2016executive].
 
-## Cognitive abilities that predict word production speed
+## Cognitive abilities that predict speed of language production
 
 Several studies have shown that how quickly an individual can produce words or short phrases is related to more general cognitive skills, including attention [@jongman2015role; @jongman2015sustained; @jongman2017sustained], working memory [@lorenz2019age; @piai2013working; @shao2012sources; but see @klaus2018investigation], and inhibition [@shao2012sources; @shao2013selective; @shao2014electrophysiological; @shao2015selective; @sikora2016executive]. For the current study, we are interested in how generalizable these relationships are, specifically, whether we find similar relationships between picture naming speed and cognitive tasks when employing a wider battery of cognitive tests that are thought to measure these constructs. As we discuss in more detail in the next section, some tasks that have been used to measure certain cognitive skills do not necessarily correlate well with each other. For example, Flanker and Simon tasks are both thought to measure inhibition, but correlations between these measures are consistently low [e.g., @paap2014bilingual]. A skill like inhibition (like other cognitive abilities) is not a unitary construct, and different tasks may very well tap into different types or components of inhibition. 
 
@@ -139,11 +139,13 @@ Working memory can be described as the ability to hold information in mind and m
 
 ### Inhibition
 
-Inhibition is described as the ability to resolve conflicts and suppress irrelevant information. Recent studies, however, suggest that inhibition is not a unitary construct  [@rey2018inhibition; @rouder2019psychometrics]. For instance, inhibition can be characterized as being selective or non-selective [@shao2013selective; @shao2015selective], and several authors further subdivide selective inhibition into two different types: stimulus-stimulus conflict and stimulus-response conflict [@hommel1997interactions; @kornblum1994way; @scerrati2017comparing]. Stimulus-stimulus conflicts arise from an incompatibility between overlapping task-relevant and task-irrelevant features of the stimulus to be processed, while stimulus-response conflicts arise from an overlap of incongruent stimulus and response features [@kornblum1994way].
+Inhibition is described as the ability to resolve conflicts and suppress irrelevant information. Recent studies, however, suggest that inhibition is not a unitary construct  [@rey2018inhibition; @rouder2019psychometrics]. For instance, inhibition can be characterized as being selective or non-selective [@shao2013selective; @shao2015selective]. Non-selective inhibition is the ability to inhibit any unwanted response [@de1995strategies], while selective inhibition describes the ability to inhibit a more specific response that directly competes with the desired response. Several authors further subdivide selective inhibition into two different types: stimulus-stimulus conflict and stimulus-response conflict [@hommel1997interactions; @kornblum1994way; @scerrati2017comparing]. Stimulus-stimulus conflicts arise from an incompatibility between overlapping task-relevant and task-irrelevant features of the stimulus to be processed, while stimulus-response conflicts arise from an overlap of incongruent stimulus and response features [@kornblum1994way].
 
-Measures of both selective and non-selective inhibition have been found to correlate with picture naming speed or the magnitude of experimental effects in a picture naming task [@shao2013selective; @shao2015selective]. For instance, @shao2013selective [-@shao2015selective] measured selective inhibition using a within-task measure derived from distributional properties of the task. In those studies, participants performed a picture-word-interference task, in which they named pictures with printed distractor words overlayed on them. The distractor words were either semantically related or unrelated to the target word. Participants typically need more time to produce words when they see semantically related distractors than unrelated distractors [i.e., the semantic interference effect, see @burki2020did for review]. @shao2013selective [-@shao2015selective] used the delta plot procedure [@ridderinkhof2004response; @ridderinkhof2005delta] to compute a measure of inhibition, which can be understood as the change in the semantic interference effect over the trials in the experiment with the slowest response times. @shao2013selective [-@shao2015selective] found that this within-task measure of inhibition correlated with the magnitude of the semantic interference effect in a picture-word interference task, as well as in a semantic blocking task [@shao2015selective; but see @fuhrmeister2022distributional, for an alternative account of this relationship]. 
+Measures of both selective and non-selective inhibition have been found to correlate with picture naming speed or the magnitude of experimental effects in a picture naming task [@shao2013selective; @shao2015selective]. For instance, @shao2013selective measured non-selective inhibition by means of a stop-signal reaction time task [@logan1984ability], which is thought to assess the ability to inhibit a motor response that has already been initiated, i.e., a non-linguistic response. On this task, participants are asked to respond to a stimulus presented, but on a certain proportion of the trials, they hear a tone to indicate they should withhold their response on that trial. @shao2013selective report correlations between performance on the stop-signal reaction time task and word production speed, suggesting that the relationship between language production and non-selective inhibition may not be specific to the language domain.
 
-Non-selective inhibition, on the other hand, is the ability to inhibit any unwanted response [@de1995strategies]. @shao2013selective measured non-selective inhibition by means of a stop-signal reaction time task [@logan1984ability], which is thought to assess the ability to inhibit a motor response that has already been initiated, i.e., a non-linguistic response. On this task, participants are asked to respond to a stimulus presented, but on a certain proportion of the trials, they hear a tone to indicate they should withhold their response on that trial. @shao2013selective report correlations between performance on the stop-signal reaction time task and word production speed, suggesting that the relationship between language production and non-selective inhibition may not be specific to the language domain. An open question is whether relationships between word production and selective inhibition can be found using tasks measuring this ability in other domains, as well. 
+@shao2013selective [-@shao2015selective] measured selective inhibition using a within-task measure derived from distributional properties of the task. In those studies, participants performed a picture-word-interference task, in which they named pictures with printed distractor words overlayed on them. The distractor words were either semantically related or unrelated to the target word. Participants typically need more time to produce words when they see semantically related distractors than unrelated distractors [i.e., the semantic interference effect, see @burki2020did for review]. @shao2013selective [-@shao2015selective] used the delta plot procedure [@ridderinkhof2004response; @ridderinkhof2005delta] to compute a measure of inhibition, which can be understood as the change in the semantic interference effect over the trials in the experiment with the slowest response times. @shao2013selective [-@shao2015selective] found that this within-task measure of inhibition correlated with the magnitude of the semantic interference effect in a picture-word interference task, as well as in a semantic blocking task [@shao2015selective]. 
+
+While it is certainly intuitive that inhibition is needed for a task such as the picture-word interference task, we showed using simulated data that the correlation between this within-task measure of inhibition and the semantic interference effect arises as a mere consequence of the distributional properties of the data [@fuhrmeister2022distributional]. Specifically, the semantic interference effect is largest in the slowest responses; therefore, it is not surprising that this measure that is computed in part with the effect size over the slowest trials correlates strongly with the mean semantic interference effect. Especially since @shao2014electrophysiological found a correlation between the size of the semantic interference effect and the ERP N2 component (thought to reflect inhibition), it is certainly possible that selective inhibition is involved in language production; however, we need different measures of inhibition to support this idea. In the current study, we have two different measures of selective inhibition that we will correlate with picture naming speed to further test this assumption.
 
 ### Attention
 
@@ -154,7 +156,7 @@ Sustained attention describes the ability to maintain alertness to detect infreq
 The goal of the current study is to extend previous findings on the relationship between cognitive skills and word production and to test how generalizable these relationships are. As discussed above, some tasks thought to measure a common construct do not necessarily correlate with each other, suggesting they measure different aspects of the skill. This provides an opportunity to better understand relationships between cognitive skills and word production. For instance, we ask whether cognitive tasks performed in different domains (e.g., linguistic, non-linguistic, auditory, visual) thought to measure a similar construct similarly predict word production speed. 
 
 <!-- Should we even give this much detail here about the task? -->
-In the first experiment, participants performed a picture-word-interference task, in which they named pictures with printed distractor words superimposed on the pictures. The task included several conditions: a baseline condition, in which participants saw a line of Xs printed on the picture; a semantic condition, in which participants saw a distractor that was either semantically related or unrelated to the picture; and a phonological condition, in which participants saw a distractor that was either phonologically related or unrelated to the target. The picture naming data have been reported elsewhere [@burki2022picture; @fuhrmeister2022behavioral]. For the present reanalysis, we analyze only trials in the baseline condition to test whether measures of working memory, inhibition, or attention predict speed of simple picture naming.
+In the first experiment, participants performed a picture-word interference task, in which they named pictures with printed distractor words superimposed on the pictures. The task included several conditions: a baseline condition, in which participants saw a line of Xs printed on the picture; a semantic condition, in which participants saw a distractor that was either semantically related or unrelated to the picture; and a phonological condition, in which participants saw a distractor that was either phonologically related or unrelated to the target. The picture naming data have been reported elsewhere [@burki2022picture; @fuhrmeister2022behavioral]. For the present reanalysis, we analyze only trials in the baseline condition to test whether measures of working memory, inhibition, or attention predict speed of simple picture naming.
 
 # Method
 
@@ -164,17 +166,17 @@ A total of 45 participants (ages 18-30, mean age = 23, *SD* = 3.51) were recruit
 
 ## Procedure
 
-Participants performed several tasks over three different sessions. In the first session, participants completed a picture-word-interference task, a delayed naming task, and a word naming task (i.e., reading aloud). Again, only the baseline condition of the picture-word-interference task is reported here. The continuous EEG was also recorded during the picture-word-interference task, but those data are also reported elsewhere [@fuhrmeister2022behavioral]. In the second and third sessions of the experiment, the following cognitive tests were administered: the German MWT-B [Mehrfachwahl-Wortschatztest, Version B, @lehrl1975mehrfachwahl], the coding subtest of the Wechsler Adult Intelligence Scale--Fourth Edition [WAIS-IV, @wechsler2008wechsler], the digit span forward and backward subtest of the Wechsler Memory Scale Revised [@wechsler1987wechsler], and the Corsi Block-Tapping Task forward and backward. These tests are part of the battery of tests used in an institutional project on variability in language and are used to allow comparisons across age groups and to screen potential control participants for projects that involve participants with aphasia. These tests were not analyzed in the present study and will not be reported further. During the third session, participants performed eight cognitive tasks (see Table \@ref(tab:cogskillsdesstats)). These were included to test for relationships between measures of cognitive functions and performance on the language production task.
+Participants performed several tasks over three different sessions. In the first session, participants completed a picture-word interference task, a delayed naming task, and a word naming task (i.e., reading aloud). Again, only the baseline condition of the picture-word interference task is reported here. The continuous EEG was also recorded during the picture-word interference task, but those data are also reported elsewhere [@fuhrmeister2022behavioral]. In the second and third sessions of the experiment, the following cognitive tests were administered: the German MWT-B [Mehrfachwahl-Wortschatztest, Version B, @lehrl1975mehrfachwahl], the coding subtest of the Wechsler Adult Intelligence Scale--Fourth Edition [WAIS-IV, @wechsler2008wechsler], the digit span forward and backward subtest of the Wechsler Memory Scale Revised [@wechsler1987wechsler], and the Corsi Block-Tapping Task forward and backward. These tests are part of the battery of tests used in an institutional project on variability in language and are used to allow comparisons across age groups and to screen potential control participants for projects that involve participants with aphasia. These tests were not analyzed in the present study and will not be reported further. During the third session, participants performed eight cognitive tasks (see Table \@ref(tab:cogskillsdesstats)) to test for relationships between measures of cognitive functions and performance on the language production task.
 
 ## Stimuli and task descriptions
 
-### Picture-naming task
+### Picture naming task
 
-Stimuli for the picture-naming task consisted of 90 pictures from the Multipic database [@dunabeitia2018multipic]. Lemma frequencies (mean frequency = 1991.3, *SD* = 3678.4, range 9-21184) for the words were obtained from the dlex database [@heister2011dlexdb]. As mentioned above, the original task contained several conditions with distractor words printed on the pictures; however, only trials from the baseline condition, which consisted of six Xs superimposed on the picture, are reported here. 
+Stimuli for the picture naming task consisted of 90 pictures from the Multipic database [@dunabeitia2018multipic]. Lemma frequencies (mean frequency = 1991.3, *SD* = 3678.4, range 9-21184) for the words were obtained from the dlex database [@heister2011dlexdb]. As mentioned above, the original task contained several conditions with distractor words printed on the pictures; however, only trials from the baseline condition, which consisted of six Xs superimposed on the picture, are reported here. 
 
 Participants were first familiarized with the pictures: They saw one picture at a time on the screen with its corresponding name and were asked to read the words silently. The presentation of items was randomized.
 
-For the picture-naming task, participants first completed a short training phase, followed by the main task, which consisted of five blocks of trials. Each picture was presented once per block, and there was an equal number of trials in each condition per block. Pictures were presented in a pseudorandom order in each block. The structure of a trial was as follows: a fixation cross appeared on the screen for 2200-2300ms; then the picture was displayed either for 2300ms or until the participant started speaking. Vocal responses were recorded for 3000ms starting at the onset of picture presentation. A trial ended with an inter-trial interval that had a random duration between 1000 and 1200ms. 
+For the picture naming task, participants first completed a short training phase, followed by the main task, which consisted of five blocks of trials. Each picture was presented once per block, and there was an equal number of trials in each condition per block. Pictures were presented in a pseudorandom order in each block. The structure of a trial was as follows: a fixation cross appeared on the screen for 2200-2300ms; then the picture was displayed either for 2300ms or until the participant started speaking. Vocal responses were recorded for 3000ms starting at the onset of picture presentation. A trial ended with an inter-trial interval that had a random duration between 1000 and 1200ms. 
 
 ### Cognitive skills
 
@@ -199,7 +201,7 @@ Following the recommendations of @matzke2018stop, the task started with a famili
 
 #### Flanker task
 
-In the Flanker task, an arrow pointing either to the left or to the right is presented at the center of the screen, and participants have to determine the direction of the arrow using the corresponding left or right arrow key on the keyboard. This central arrow is flanked either by arrows pointing to the same direction (congruent condition), the opposite direction (incongruent condition), or by straight lines (neutral condition). Participants started with 18 training trials, six in each condition. There were four experimental blocks, each consisting of 46 congruent trials, 46 incongruent trials and 46 neutral trials [see @hedge2018reliability for justification regarding the number of trials in this task].
+In the Flanker task, an arrow pointing either to the left or to the right is presented at the center of the screen, and participants have to determine the direction of the arrow using the corresponding left or right arrow key on the keyboard. This central arrow is flanked either by arrows pointing in the same direction (>>>>>, congruent condition), the opposite direction (<<><<, incongruent condition), or by straight lines (-->--, neutral condition). Participants started with 18 training trials, six in each condition. There were four experimental blocks, each consisting of 46 congruent trials, 46 incongruent trials and 46 neutral trials [see @hedge2018reliability for justification regarding the number of trials in this task].
 
 #### Simon task
 
@@ -211,7 +213,7 @@ In this task, participants see a flow of visual symbols that vary in shapes (i.e
 
 #### Continuous time expectancy task
 
-For this task, participants saw visual patterns and were asked to identify a pattern that was presented for a longer duration than the others (see Figure X). We used four visual patterns, as in @o2009uncovering. The standard duration in our task was set to 800ms, and the target duration was set to 1300ms. The procedure started with a familiarization block, followed by a training block, and ended with a single experimental block. During the familiarization block, 32 patterns appeared one by one on the screen. Four of these patterns were target patterns, while the other ones were standard patterns. Participants had to detect the target patterns but were not asked to respond. A training block followed only if participants reported that, during the familiarization block, they noticed some patterns (the target) lasting longer than the other ones. During the training block, they were instructed to press the space bar as soon as they noticed a target. There were 24 trials and among them, 3 targets. If participants were unable to detect the three targets during the training block, they had to perform it again until they were able to detect every target. The experimental block consisted in 674 trials, with 84 targets. Distances between two deviant trials ranged from 4 to 10 trials, with 12 trials for each of these numbers. Following the presentation of a target, participants had to provide an answer within 700ms.
+For this task, participants saw visual patterns and were asked to identify a pattern that was presented for a longer duration than the others. We used four visual patterns, as in @o2009uncovering. The standard duration in our task was set to 800ms, and the target duration was set to 1300ms. The procedure started with a familiarization block, followed by a training block, and ended with a single experimental block. During the familiarization block, 32 patterns appeared one by one on the screen. Four of these patterns were target patterns, while the other ones were standard patterns. Participants had to detect the target patterns but were not asked to respond. A training block followed only if participants reported that, during the familiarization block, they noticed some patterns (the target) lasting longer than the other ones. During the training block, they were instructed to press the space bar as soon as they noticed a target. There were 24 trials and among them, 3 targets. If participants were unable to detect the three targets during the training block, they had to perform it again until they were able to detect every target. The experimental block consisted in 674 trials, with 84 targets. Distances between two deviant trials ranged from 4 to 10 trials, with 12 trials for each of these numbers. Following the presentation of a target, participants had to provide an answer within 700ms.
 
 ## Analyses
 
@@ -230,20 +232,20 @@ We first calculated descriptive statistics (mean and standard deviation) of all 
 ```{r Exp1datawrangling, include=FALSE}
 
 # Reanalysis of EEG experiment: individual differences
-df <- read.csv("data/Results_PWI_EEG_20200526.csv", sep=";")
+df <- read.csv("../data/Results_PWI_EEG_20200526.csv", sep=";")
 colnames(df)[1] <- "Participant"
-ccpt <- fread("Data/Experience_01_CCPT.csv", select = c("sujet", "Hit_rate"))
+ccpt <- fread("../data/Experience_01_CCPT.csv", select = c("sujet", "Hit_rate"))
 colnames(ccpt) <- c("Participant", "CCPT")
 ccpt <- distinct(ccpt)
-ctet <- fread("Data/CTET_Results.csv", select = c("Participant", "Hit"))
+ctet <- fread("../data/CTET_Results.csv", select = c("Participant", "Hit"))
 colnames(ctet)[2] <- "CTET"
-ospan <- fread("Data/OSpan_Results.csv", select = c("Participant", "Mean_Block"))
+ospan <- fread("../data/OSpan_Results.csv", select = c("Participant", "Mean_Block"))
 colnames(ospan)[2] <- "OSpan"
-rotspan <- fread("Data/RotSpan_Results.csv", select = c("Participant", "Mean_Block"))
+rotspan <- fread("../data/RotSpan_Results.csv", select = c("Participant", "Mean_Block"))
 colnames(rotspan)[2] <- "RotSpan"
-symspan <- fread("Data/SymSpan_Results.csv", select = c("Participant", "Mean_Block"))
+symspan <- fread("../data/SymSpan_Results.csv", select = c("Participant", "Mean_Block"))
 colnames(symspan)[2] <- "SymSpan"
-ssrt <- fread("Data/StopSignal_Results.csv", select = c("Participant", "Mean_SSRTi"))
+ssrt <- fread("../data/StopSignal_Results.csv", select = c("Participant", "Mean_SSRTi"))
 colnames(ssrt)[2] <- "SSRT"
 
 df$Participant <- as.factor(as.character(df$Participant))
@@ -463,7 +465,7 @@ The analyses were idential to Experiment 1, except the exgaussian parameters wer
 # Results
 
 ```{r Exp 2 data wrangling, include=FALSE}
-exp2 <- read.csv("data/Experiment_2_data.csv", sep=",")
+exp2 <- read.csv("../data/Experiment_2_data.csv", sep=",")
 
 exp2$Accuracy <- as.factor(as.character(exp2$Response_Trial))
 exp2$Participant <- as.factor(as.character(exp2$Participant_ID))
