--- a/scripts/r-references.bib
+++ b/scripts/r-references.bib
@@ -1,12 +1,66 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pamela Fuhrmeister at 2023-01-04 16:33:05 +0100 
+%% Created for Pamela Fuhrmeister at 2023-04-05 15:47:55 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{becic2010brief,
+	author = {Becic, Ensar and Dell, Gary S and Bock, Kathryn and Garnsey, Susan M and Kubose, Tate and Kramer, Arthur F},
+	date-added = {2023-04-05 15:47:52 +0200},
+	date-modified = {2023-04-05 15:47:52 +0200},
+	journal = {Psychonomic bulletin \& review},
+	number = {1},
+	pages = {15--21},
+	title = {BRIEF REPORTS Driving impairs talking},
+	volume = {17},
+	year = {2010}}
+
+@article{dromey2019bidirectional,
+	author = {Dromey, Christopher and Simmons, Kelsey},
+	date-added = {2023-04-05 15:47:14 +0200},
+	date-modified = {2023-04-05 15:47:14 +0200},
+	journal = {Journal of Speech, Language, and Hearing Research},
+	number = {7},
+	pages = {2053--2064},
+	publisher = {ASHA},
+	title = {Bidirectional interference between simulated driving and speaking},
+	volume = {62},
+	year = {2019}}
+
+@article{corsi1972human,
+	author = {Corsi, Philip Michael},
+	date-added = {2023-04-04 15:43:14 +0200},
+	date-modified = {2023-04-04 15:43:14 +0200},
+	title = {Human memory and the medial temporal region of the brain.},
+	year = {1972}}
+
+@article{verbruggen2013fictitious,
+	author = {Verbruggen, Frederick and Chambers, Christopher D and Logan, Gordon D},
+	date-added = {2023-04-04 12:51:11 +0200},
+	date-modified = {2023-04-04 12:51:11 +0200},
+	journal = {Psychological science},
+	number = {3},
+	pages = {352--362},
+	publisher = {Sage Publications Sage CA: Los Angeles, CA},
+	title = {Fictitious inhibitory differences: how skewness and slowing distort the estimation of stopping latencies},
+	volume = {24},
+	year = {2013}}
+
+@article{levelt1999theory,
+	author = {Levelt, Willem JM and Roelofs, Ardi and Meyer, Antje S},
+	date-added = {2023-04-04 10:56:06 +0200},
+	date-modified = {2023-04-04 10:56:06 +0200},
+	journal = {Behavioral and brain sciences},
+	number = {1},
+	pages = {1--38},
+	publisher = {Cambridge University Press},
+	title = {A theory of lexical access in speech production},
+	volume = {22},
+	year = {1999}}
 
 @article{ferreira2002central,
 	author = {Ferreira, Victor S and Pashler, Harold},
@@ -1450,39 +1504,55 @@
 	title = {Cross-linguistic interference in late language learners: An ERP study},
 	volume = {221},
 	year = {2021}}
-@Manual{R-GGally,
-  title = {GGally: Extension to 'ggplot2'},
-  author = {Barret Schloerke and Di Cook and Joseph Larmarange and Francois Briatte and Moritz Marbach and Edwin Thoen and Amos Elberg and Jason Crowley},
-  year = {2021},
-  note = {R package version 2.1.2},
-  url = {https://CRAN.R-project.org/package=GGally},
-}
-@Manual{R-broom.mixed,
-  title = {broom.mixed: Tidying Methods for Mixed Models},
-  author = {Ben Bolker and David Robinson},
-  year = {2022},
-  note = {R package version 0.2.9.4},
-  url = {https://CRAN.R-project.org/package=broom.mixed},
-}
-@Article{R-lmerTest,
-  title = {{lmerTest} Package: Tests in Linear Mixed Effects Models},
-  author = {Alexandra Kuznetsova and Per B. Brockhoff and Rune H. B. Christensen},
-  journal = {Journal of Statistical Software},
-  year = {2017},
-  volume = {82},
-  number = {13},
-  pages = {1--26},
-  doi = {10.18637/jss.v082.i13},
-}
+
+@manual{R-GGally,
+	author = {Barret Schloerke and Di Cook and Joseph Larmarange and Francois Briatte and Moritz Marbach and Edwin Thoen and Amos Elberg and Jason Crowley},
+	note = {R package version 2.1.2},
+	title = {GGally: Extension to 'ggplot2'},
+	url = {https://CRAN.R-project.org/package=GGally},
+	year = {2021},
+	bdsk-url-1 = {https://CRAN.R-project.org/package=GGally}}
+
+@manual{R-broom.mixed,
+	author = {Ben Bolker and David Robinson},
+	note = {R package version 0.2.9.4},
+	title = {broom.mixed: Tidying Methods for Mixed Models},
+	url = {https://CRAN.R-project.org/package=broom.mixed},
+	year = {2022},
+	bdsk-url-1 = {https://CRAN.R-project.org/package=broom.mixed}}
+
+@article{R-lmerTest,
+	author = {Alexandra Kuznetsova and Per B. Brockhoff and Rune H. B. Christensen},
+	doi = {10.18637/jss.v082.i13},
+	journal = {Journal of Statistical Software},
+	number = {13},
+	pages = {1--26},
+	title = {{lmerTest} Package: Tests in Linear Mixed Effects Models},
+	volume = {82},
+	year = {2017},
+	bdsk-url-1 = {https://doi.org/10.18637/jss.v082.i13}}
 
 @article{forstmann2008function,
-  title={Function and structure of the right inferior frontal cortex predict individual differences in response inhibition: a model-based approach},
-  author={Forstmann, Birte U and Jahfari, Sara and Scholte, H Steven and Wolfensteller, Uta and van den Wildenberg, Wery PM and Ridderinkhof, K Richard},
-  journal={Journal of Neuroscience},
-  volume={28},
-  number={39},
-  pages={9790--9796},
-  year={2008},
-  publisher={Soc Neuroscience}
+	author = {Forstmann, Birte U and Jahfari, Sara and Scholte, H Steven and Wolfensteller, Uta and van den Wildenberg, Wery PM and Ridderinkhof, K Richard},
+	journal = {Journal of Neuroscience},
+	number = {39},
+	pages = {9790--9796},
+	publisher = {Soc Neuroscience},
+	title = {Function and structure of the right inferior frontal cortex predict individual differences in response inhibition: a model-based approach},
+	volume = {28},
+	year = {2008}}
+@Manual{R-cowplot,
+  title = {cowplot: Streamlined Plot Theme and Plot Annotations for 'ggplot2'},
+  author = {Claus O. Wilke},
+  year = {2020},
+  note = {R package version 1.1.1},
+  url = {https://CRAN.R-project.org/package=cowplot},
 }
-
+@Manual{R-ggExtra,
+  title = {ggExtra: Add Marginal Histograms to 'ggplot2', and More 'ggplot2'
+Enhancements},
+  author = {Dean Attali and Christopher Baker},
+  year = {2022},
+  note = {R package version 0.10.0},
+  url = {https://CRAN.R-project.org/package=ggExtra},
+}
